samples/_failures_safe/1761137948_a55efa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5e793ec.c: In function ‘main’:
./samples/SAFE/__tmp_b5e793ec.c:193:17: error: expected declaration or statement at end of input
  193 |                 data++;
      |                 ^~~~
./samples/SAFE/__tmp_b5e793ec.c:193:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b5e793ec.c:193:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b5e793ec.c:193:17: error: expected declaration or statement at end of input
